Events & orgs; mathematics (Kline, Gödel).

--- a/science/index.html
+++ b/science/index.html
@@ -152,6 +152,18 @@
         <q cite="http://www.project2061.org/publications/sfaa/">educators, parents, school administrators, and policymakers</q>.
         Oxford University Press published a printed version in 1991.
       </li>
+      <li>The <a href="http://www.worldsciencefestival.com/">World Science Festival</a>
+        is a yearly event in New York City produced by the Science Festival Foundation (a non-profit organisation).
+        <a href="http://www.worldscienceu.com/">World Science U</a> 
+        is a related website that provides education on science.
+        The Festival also has a 
+        <a href="https://www.youtube.com/user/worldsciencefestival/">YouTube channel</a>.
+      </li>
+      <li><a href="http://www.sciencesessonne.fr/" lang="fr" hreflang="fr">Sciences Essonne</a>
+        is a network of universities, research centres, associations, companies etc. in the
+        <a href="https://en.wikipedia.org/wiki/Essonne">Essonne department</a> in the north of France,
+        that aims to bring science to the general public. 
+      </li>
       <li>Angier, Natalie: 
         <i class="booktitle">The Canon: The Beautiful Basics of Science</i>.
         Faber &amp; Faber, 2008. 
@@ -263,6 +275,9 @@
         Wood, Bernard: Human Evolution: A Very Short Introduction. Oxford University Press, 2005.
         Dunbar, Robin: Human Evolution: A Pelican Introduction. Pelican, 2014. 
       -->
+      <li><a href="http://hsm.stackexchange.com/">History of Science and Mathematics</a>,
+        a question and answer site hosted by Stack Exchange.
+      </li>
     </ul>
 
     <h3>History of Mathematics</h3>
@@ -270,11 +285,19 @@
       <a href="https://en.wikipedia.org/wiki/History_of_mathematics">history of mathematics</a> 
       on Wikipedia.
     </p>
-    <ul><a href="https://en.wikipedia.org/wiki/Morris_Kline">Kline, Morris</a>:
-      <a href="https://en.wikipedia.org/wiki/Mathematics:_The_Loss_of_Certainty"
-      class="booktitle">Mathematics: The Loss of Certainty</a>.
-      Oxford: Oxford University Press, 1980. (384 p.)
-      <abbr>ISBN</abbr> <a href="http://ukcatalogue.oup.com/product/9780195030853.do">978-0-19-503085-3</a>.
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Morris_Kline">Kline, Morris</a>:
+        <a href="https://en.wikipedia.org/wiki/Mathematics:_The_Loss_of_Certainty"
+        class="booktitle">Mathematics: The Loss of Certainty</a>.
+        Oxford: Oxford University Press, 1980. (384 p.)
+        <abbr>ISBN</abbr> <a href="http://ukcatalogue.oup.com/product/9780195030853.do">978-0-19-503085-3</a>.
+      </li>
+      <li>Colyvan, Mark:
+        &ldquo;Kurt Gödel and the Limits of Mathematics&rdquo;:
+        <a href="https://www.youtube.com/watch?v=bYpSVSGBxis">part 1</a> (25 minutes),
+        <a href="https://www.youtube.com/watch?v=CCac2oP4XB8">part 2</a> (22 minutes).
+      </li><!-- @@move to separate mathematics page -->
     </ul>
 
     <h3>History of Medicine</h3>
@@ -465,51 +488,66 @@
       * "Lucy: Debunking the 10% Brain Myth", "Emory Looks at Hollywood" (w. Krish Sathian), Emory University: https://www.youtube.com/watch?v=Tt2dEep9vHA 
       * Wikipedia: "Ten percent of the brain myth": https://en.wikipedia.org/wiki/Ten_percent_of_the_brain_myth (this is even referenced from the article about the film "Lucy": https://en.wikipedia.org/wiki/Lucy_%282014_film%29 ). 
     -->
+
+    <!-- John S. Wilkins: Species: The History of an Idea. University of California Press, 2011: http://www.ucpress.edu/book.php?isbn=9780520271395 -->
+    <!-- "INTRINSIC MOTIVATION DOESN'T EXIST, RESEARCHER SAYS", Ohio State University, 2005: http://researchnews.osu.edu/archive/inmotiv.htm
+          see also https://en.wikipedia.org/wiki/Motivation#Intrinsic_motivation_and_the_16_basic_desires_theory 
+          (Steven Reiss: https://en.wikipedia.org/wiki/Steven_Reiss )
+    -->
+  
+    <!-- 
+    <h2>Statistics and Probability</h2>
+    <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
+    <ul>
+      <li>Childers, Timothy:
+        <i class="booktitle">Philosophy and Probability</i>.
+        Oxford University Press, 2013. (216 p.)
+        <a href="https://global.oup.com/academic/product/philosophy-and-probability-9780199661831?q=probability%20and%20philosophy&lang=en&cc=de"><abbr>ISBN</abbr> 9780199661831</a>.
+      </li>
+      <li>Hájek, Alan; Hitchcock, Christopher, eds.:
+        <i class="booktitle">The Oxford Handbook of Probability and Philosophy</i>.
+        Oxford University Press, 2016. (832 p.)
+        <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-probability-and-philosophy-9780199607617?cc=de&lang=en&"><abbr>ISBN</abbr> 9780199607617</a>.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall problem</a> on Wikipedia.
+        (See also <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
+        on the Scam School channel on YouTube.)
+      </li>
+    </ul>
+    -->
+  
+    <h2><abbr>HdM</abbr> Science Day</h2>
+    <p>Each semester, Stuttgart Media University (<span lang="de">Hochschule der Medien</span>)
+      organises a &ldquo;science day&rdquo;. This is an event where researches present
+      topics that are not part of the regular curriculum at the university.
+      The presentations can also be viewed through a live video stream;
+      the videos recordings are then archived.
+    </p>
+    <ul>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
+        21 December 2012.
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
+        21 June 2013.
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
+        18 November 2013.
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
+        9 May 2014.
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
+        12 December 2014.
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
+        26 June 2015. 
+      </li>
+      <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
+        18 December 2015. 
+      </li>
+    </ul>
   </main>
-  <!-- John S. Wilkins: Species: The History of an Idea. University of California Press, 2011: http://www.ucpress.edu/book.php?isbn=9780520271395 -->
-
-  <!-- 
-  <h2>Statistics and Probability</h2>
-  <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
-  <ul>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall problem</a> on Wikipedia.
-      (See also <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
-      on the Scam School channel on YouTube.)
-    </li>
-  </ul>
-  -->
-
-  <h2><abbr>HdM</abbr> Science Day</h2>
-  <p>Each semester, Stuttgart Media University (<span lang="de">Hochschule der Medien</span>)
-    organises a &ldquo;science day&rdquo;. This is an event where researches present
-    topics that are not part of the regular curriculum at the university.
-    The presentations can also be viewed through a live video stream;
-    the videos recordings are then archived.
-  </p>
-  <ul>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
-      21 December 2012.
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
-      21 June 2013.
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
-      18 November 2013.
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
-      9 May 2014.
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
-      12 December 2014.
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2015-06-26-science-day">6th Science Day</a>,
-      26 June 2015. 
-    </li>
-    <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
-      18 December 2015. 
-    </li>
-  </ul>
 
   <footer>
     <p class="licence">
