--- a/philscience/index.html
+++ b/philscience/index.html
@@ -683,10 +683,32 @@
         <a href="https://www.youtube.com/results?search_query=epsa13+helsinki+tint+coe">Video recordings of the presentations</a> are available on YouTube;
         unfortunately, there is no handy playlist to make them easier to find.
       </li>
+      <li><span lang="de">Hoyningen-Huene, Paul</span>: 
+        <a href="https://www.youtube.com/watch?v=eIJmRu2OS8E">Systematicity: The Nature of Science</a>,
+        a presentation given at the 
+        <a href="http://www.mcmp.philosophie.uni-muenchen.de/index.html">Munich Center for Mathematical Philosophy (<abbr>MCMP</abbr>)</a>
+        <!-- Thursday, 01.12.2011: http://www.mcmp.philosophie.uni-muenchen.de/events/archive/2011/coll_mathphil_thurs/index.html -->
+        on 01.12.2011.
+        In 2013, <span lang="de">Hoyningen-Huene</span> published a book with the same title:
+        <i class="booktitle">Systematicity: The Nature of Science</i> (Oxford University Press, 2013.
+        <a href="https://global.oup.com/academic/product/systematicity-9780199985050?cc=be&lang=en&"><abbr>ISBN</abbr> 9780199985050</a>).
+        <!-- Reviews: 
+          * Darrell P. Rowbottom: http://ndpr.nd.edu/news/43713-systematicity-the-nature-of-science/ 
+          * Michael Ruse: http://www.jstor.org/stable/10.1086/676562?ai=13i&af=R#page_scan_tab_contents 
+          * Esther M. van Dijk: https://www.researchgate.net/publication/249012832_Book_review_Paul_Hoyningen-Huene_Systematicity_The_Nature_of_Science 
+          * MARIAM THALOS: Review article of Paul Hoyningen-Huene, Systematicity: The Nature of Science (OUP), forthcoming in Mind. Accepted, 07/2014. [https://faculty.utah.edu/u0270024-MARIAM_THALOS/bibliography/index.hml]
+            see http://www.academia.edu/7744013/Review_of_Systematicity_The_Nature_of_Science_by_Paul_Hoyningen-Huene 
+          * Zeitschrift für philosophische Forschung 69 (2015): http://www.klostermann.de/Zeitschrift-fuer-philosophische-Forschung-69-2015 
+        -->
+      </li>
       <li><a href="https://en.wikipedia.org/wiki/Logology_%28science_of_science%29">Logology (science of science)</a>:
         article on Wikipedia.
         (Logology was proposed in the 1930s as a discipline that would subsume several other disciplines, 
         namely epistemology, philosophy of science, psychology of science and sociology of science.)<!-- @@the philosophy/psychology/sociology of science? -->
+      </li>
+      <li><span lang="de">Mittelstraß, Jürgen</span>:
+        <a href="https://www.youtube.com/watch?v=mJbkigqkz34">Some Epistemological Aspects in the Philosophy of Science</a>,
+        recording of a lecture at the University of Innsbruck on 27.01.2015. 
       </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
