Niko Alm on freedom of religion.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -123,6 +123,35 @@
       </li>
     </ul>
 
+    <h2>Other Resources</h2>
+    <ul>
+      <li><span lang="de">Alm, Niko</span>:
+        <a href="https://www.youtube.com/watch?v=VjQ3ufqnf-M">The End of Freedom of Religion</a>,
+        <a href="http://www.tedxvienna.at/blog/videogallery/tedxvienna-niko-alm-the-end-of-freedom-of-religion/">TEDx Vienna, 22.10.2011</a>
+        (&ldquo;<a href="http://www.tedxvienna.at/watch/2011-the-domino-effect/">The Domino Effect</a>&rdquo;).
+        <br /><a href="https://de.wikipedia.org/wiki/Niko_Alm" lang="de" hreflang="de">Niko Alm</a>
+        was the first Austrian who won the right to use a photo with 
+        <a href="https://en.wikipedia.org/wiki/Flying_Spaghetti_Monster">pastafarian</a> headgear.
+        See also
+        <ul>
+          <li>
+            <a href="http://www.bbc.com/news/world-europe-14135523">Austrian driver allowed 'pastafarian' headgear photo</a>,
+            <i class="website"><abbr>BBC</abbr> News</i>, 14.07.2011.
+          </li>
+          <li>Alm, Niko:
+            <a href="http://alm.at/der-zweite-fuhrerschein-mit-nudelsieb/" lang="de" hreflang="de">Der zweite Führerschein mit Nudelsieb!</a>,
+            <i class="website">alm.at</i>, 02.07.2013.
+            <br />
+            <a href="http://alm.at/the-second-pastafarian-drivers-license/">The second Pastafarian driver’s license</a>,
+            <i class="website">alm.at</i>, 03.07.2013 (English version of the above).
+          </li>
+          <li>
+            <a href="http://www.bbc.com/news/world-europe-35305899">'Pastafarian' wins right to wear colander in driving licence photo</a>,
+            <i class="website"><abbr>BBC</abbr> News</i>, 13.01.2016. (Russia)
+          </li>
+        </ul>
+      </li>
+    </ul>
     <!-- 
       Jerry Coyne: "I got the book! You know, the one with the best arguments for God", 20.03.2015: https://whyevolutionistrue.wordpress.com/2014/03/20/i-got-the-book-you-know-the-one-with-the-best-arguments-for-god/
       Michael Shermer: "In 100 Years, Will People Still Believe in God?" / "Weaning People of Belief is a Sales and Marketing Problem" (BigThink): https://www.youtube.com/watch?v=kktvLypq_y0
