--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -351,7 +351,7 @@
         has a 
         <a href="https://www.youtube.com/playlist?list=PL3eMcg42CrI77v5--D6eizUWrowvSyUTd">philosophy playlist</a>
         with over 90 videos. Most of the videos are between 45 and 90 minutes long.
-        The videos cover philsophers such as Aristotle,
+        The videos cover philosophers such as Aristotle,
         <span lang="fr">Henri Bergson</span>, George Steiner, <span lang="de">Martin Heidegger</span>,
         <span lang="fr">Vladimir Jankélévitch</span> (including some of his lectures), 
         <span lang="fr">Lucien Jerphagnon</span>,
