+ Science Day Topics.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -55,6 +55,8 @@
       The presentations can also be viewed through a live video stream;
       the videos recordings are then archived.
     </p>
+
+    <h2>Archived Science Day Videos</h2>
     <ul>
       <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
         21 December 2012.
@@ -76,6 +78,37 @@
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2015-12-18-science-day">7th Science Day</a>,
         18 December 2015. 
+      </li>
+    </ul>
+
+    <h2>Science Day Topics</h2>
+    <p>Below is a list of potential Science Day topics with relevant references.</p>
+
+    <h3>Chinese History</h3>
+    
+    <h3>European History</h3>
+    <h4>The Crusades Through Arab / Islamic Eyes</h4>
+    <p>The Crusades are one of many topics that Westerners only learn about from
+      a Western point of view. Since the 1980s (and possibly even earlier),
+      there have been several publications that also present the islamic<!-- @@ --> point of view.
+    </p>
+    <ul>
+      <li>Maalouf, Amin: 
+        <i class="booktitle">Les Croisades vues par les Arabes</i>. 
+        J’ai lu, 1999, ISBN 2290119164. / JC Lattès, 1983/1986, <abbr>ISBN</abbr> 2-7096-0547-3.
+      </li>
+      <li>Cobb, Paul M.: 
+        <i class="booktitle">The Race for Paradise: An Islamic History of the Crusades</i>. Oxford University Press, 2014. 
+        <a href="http://ukcatalogue.oup.com/product/9780199532018.do"><abbr>ISBN</abbr> 978-0-19-953201-8</a>.
+      </li>
+      <li>Tyerman, Christopher: 
+        <i class="booktitle">The Crusades: A Very Short Introduction</i>. 
+        Oxford University Press, 2005. 
+        <a href="http://ukcatalogue.oup.com/product/9780192806550.do"><abbr>ISBN</abbr> 978-0-19-280655-0</a>. 
+      </li>
+      <li>Riley-Smith, Jonathan, <abbr>ed.</abbr>: 
+        <i class="booktitle">The Oxford History of the Crusades</i>. Oxford University Press, 2002. 
+        <a href="http://ukcatalogue.oup.com/product/9780192803122.do"><abbr>ISBN</abbr> 978-0-19-280312-2</a>.
       </li>
     </ul>
 
