+ Science Day topic: Scottish Enlightenment.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -111,6 +111,47 @@
         <a href="http://ukcatalogue.oup.com/product/9780192803122.do"><abbr>ISBN</abbr> 978-0-19-280312-2</a>.
       </li>
     </ul>
+    
+    <h4>The Scottish Enlightenment</h4>
+    <p>The Enlightenment is strongly associated with French thinkers such as 
+      <span lang="fr">Voltaire</span>, <span lang="fr">Rouseau</span> and <span lang="fr">Diderot</span>,
+      and with the German philosopher <span lang="de">Immanuel Kant</span>.
+      The Scottish Enlightenment is less well known in continental Europe.
+    </p>
+    <ul>
+      <li>Wikipedia:
+        <a href="http://en.wikipedia.org/wiki/Scottish_Enlightenment">Scottish Enlightenment</a>. 
+      </li>
+      <li>Stanford Encyclopedia of Philosophy:
+        <a href="http://plato.stanford.edu/entries/scottish-18th/">Scottish Philosophy in the 18th Century</a>.
+      </li>
+      <li>Encyclopædia Britannica: 
+        <a href="http://www.britannica.com/EBchecked/topic/529682/Scottish-Enlightenment">Scottish Enlightenment</a>.
+      </li>
+      <li><abbr>BBC</abbr>: 
+        <a href="http://www.bbc.co.uk/scotland/history/enlightenment_and_empire/scottish_enlightenment/">The Scottish Enlightenment – mid 18th century</a>.
+      </li>
+      <li>Disability History Scotland: 
+        <a href="http://disabilityhistoryscotland.org/wiki/disability-history-wiki/the-scottish-enlightenment/">The Scottish Enlightenment</a>.
+        <br />
+        Alexander Broadie: <a href="http://www.birlinn.co.uk/The-Scottish-Enlightenment-9781841586403.html">Scottish Enlightenment</a> (Birlinn, 2007)<
+      </li>
+      <li>Broadie, Alexander: 
+        <i class="booktitle">The Cambridge Companion to the Scottish Enlightenment</i>. Cambridge University Press, 2003.
+      </li>
+      <li>Sher, Richard B.:
+        <i class="booktitle">The Enlightenment and the Book: Scottish Authors and Their Publishers in Eighteenth-Century Britain, Ireland, and America</i>. 
+        University of Chicago Press, 2007.
+      </li>
+      <li>Ahnert, Thomas; Manning, Susan: 
+        <i class="booktitle">haracter, Self, and Sociability in the Scottish Enlightenment</i>. 
+        Palgrave Studies in Cultural and Intellectual History. <!-- Palgrave? --> 2011.
+      </li>
+      <li>Wilson, David B.:
+        <i class="booktitle">Seeking Nature's Logic: Natural Philosophy in the Scottish Enlightenment</i>. 
+        Pennsylvania State University Press, 2009.
+      </li>
+    </ul>
 
   </main>
 
