Science Day topics: Myths about Middle Ages.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -111,7 +111,64 @@
         <a href="http://ukcatalogue.oup.com/product/9780192803122.do"><abbr>ISBN</abbr> 978-0-19-280312-2</a>.
       </li>
     </ul>
-    
+
+    <h4>Myths about the Middle Ages</h4>
+    <ul>
+      <li>People thought that the Earth was flat; see 
+        <a href="https://en.wikipedia.org/wiki/Flat_Earth">Flat earth (Wikipedia)</a>.
+        (It is actually hard to find Medieval claims that the Earth was flat.)
+      </li>
+      <li>Witch burning was common in the Middle Ages 
+        (see <abbr>e.g.</abbr> the witch hunting scene in 
+        <i class="film">Monty Python and the Holy Grail</i><!-- @@link -->).
+        Witch hunting was more common in the late Middle Ages and the Renaissance.
+        The infamous <a href="https://de.wikipedia.org/wiki/Hexenhammer" hreflang="de"><i class="booktitle"><span lang="la">Malleus Maleficarum</span> / <span lang="de">Hexenhammer</span></i></a>
+        was probably first published in 1486, <abbr>i.e.</abbr> at the end of the Middle Ages.
+        See also
+        <a href="https://en.wikipedia.org/wiki/Witch-hunt">witch-hunt (Wikipedia)</a>,
+        <a href="https://de.wikipedia.org/wiki/Hexenverfolgung" lang="de" hreflang="de">Hexenverfolgung (Wikipedia)</a>.
+      </li>
+      <li><span lang="fr">Droit du seigneur</span> <abbr>aka</abbr> <span lang="la">ius primae noctis</span>: 
+        <a href="https://en.wikipedia.org/wiki/Droit_du_seigneur" lang="fr" hreflang="en">droit du seigneur (Wikipedia)</a>. 
+        <br />See also: 
+        <ul>
+          <li><span lang="fr">Boureau, Alain</span>: 
+            <i class="booktitle">The Lord's First Night: The Myth of the Droit de Cuissage</i>. Translated by Lydia G. Cochrane. 
+            University of Chicago Press, 1998. 
+            <a href="http://press.uchicago.edu/ucp/books/book/chicago/L/bo3629910.html"><abbr>ISBN</abbr> 9780226067438</a>.
+          </li>
+        </ul>
+      </li>
+      <li>Chastity belts: <a href="https://en.wikipedia.org/wiki/Chastity_belt">chastity belt (Wikipedia)</a>. 
+        <br />See also: 
+        <ul>
+          <li>Laskow, Sarah: 
+            <a href="http://www.atlasobscura.com/articles/everything-youve-heard-about-chastity-belts-is-a-lie">Everything You've Heard About Chastity Belts Is a Lie</a>,
+            <i class="website">Atlas Obscura</i>, 17 August 2015.
+          </li>
+        </ul>
+      </li>
+      <li>Religious taboos prevented medical dissection of bodies. 
+        See <a href="https://en.wikipedia.org/wiki/Katharine_Park">Katharine Park’s</a> book about late medieval dissection. 
+        <!-- [<a href="https://harvard.academia.edu/KatharinePark">Katharine Park on Academia.edu</a>.] -->
+        See also 
+        <i class="website">Secrets of Women: Gender, Generation, and the Origins of Human Dissection</i>. Zone Books, 2006. 
+        <abbr>ISBN</abbr> 9781890951672. 
+      </li>
+      <li>Vikings had horned helmets. (Debunked on Wikipedia.)
+      </li>
+      <li>James Franklin: <a href="http://web.maths.unsw.edu.au/~jim/medmyths.html">Myths about the Middle Ages</a>. 
+      </li>
+      <li><span lang="fr">Pernoud, Régine</span>: 
+        <i class="booktitle">Those Terrible Middle Ages: Debunking the Myths</i>. Ignatius Press, 2000. 
+        <abbr>ISBN</abbr> 0898707811.
+        <br />
+        <span lang="fr">Pernoud, Régine</span>: 
+        <i class="booktitle" lang="fr">Pour en finir avec le Moyen Age</i>. [1944] Points, 2014. 
+        <abbr>ISBN</abbr> 978-2757841075.
+      </li>
+    </ul>
+
     <h4>The Scottish Enlightenment</h4>
     <p>The Enlightenment is strongly associated with French thinkers such as 
       <span lang="fr">Voltaire</span>, <span lang="fr">Rouseau</span> and <span lang="fr">Diderot</span>,
