Science Day topics: first Chinese emperor.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -85,7 +85,40 @@
     <p>Below is a list of potential Science Day topics with relevant references.</p>
 
     <h3>Chinese History</h3>
-    
+    <h4>The First Chinese Emperor</h4>
+    <p>See:</p>
+    <ul>
+      <li lang="fr">Gernet, Jacques: 
+        <i class="booktitle">La Chine ancienne</i>. Que sais-je? 1113. 
+        Paris: Presses Universitaires de France, 1964, 2005.
+      </li>
+      <li>Hansen, Valerie: 
+        <i class="booktitle">The Open Empire. A History of China to 1600</i>. Norton: 2000. 
+        <a href="http://books.wwnorton.com/books/webad.aspx?id=11033"><abbr>ISBN</abbr> 978-0-393-97374-7</a>. 
+      </li>
+      <li>Clements, Jonathan:
+        <i class="booktitle">The First Emperor of China</i>. The History Press, 2007.
+      </li>
+      <li>Man, John: 
+        <i class="booktitle">The Terracotta Army</i>. Bantam 2007.
+      </li>
+      <li>Jane Portal: 
+        <i class="booktitle">The First Emperor: China's Terracotta Army</i>. 
+        Atlanta: High Museum of Art, 2008.
+        (See <a href="http://www.ajaonline.org/online-review-museum/369">The First Emperor: China’s Terracotta Army</a>, <abbr>AJA</abbr> Online, July 2009.)
+      </li>
+      <li>Sima Qian; Watson,  Burton (translator): 
+        <i class="booktitle">Records of the Grand Historian: Qin Dynasty</i>. 
+        Columbia University Press, 1996.
+        <a href="http://cup.columbia.edu/book/records-of-the-grand-historian/9780231081696"><abbr>ISBN</abbr> 9780231081696</a>.
+      </li>
+      <li>Sima Qian; Dawson,  Raymond; Brashier,  K. E.: 
+        <i class="booktitle">The First Emperor: Selections from the Historical Records</i>. Oxford World's Classics. 
+        Oxford University Press, 2009. 
+        <a href="http://ukcatalogue.oup.com/product/9780199574391.do"><abbr>ISBN</abbr> 978-0-19-957439-1</a>. 
+      </li>
+    </ul>
+
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
     <p>The Crusades are one of many topics that Westerners only learn about from
