Kaiser (Science, Feb 2016).

--- a/science/index.html
+++ b/science/index.html
@@ -440,7 +440,16 @@
         <i class="journal">Perspectives on Psychological Science</i>, 7.6 (November 2012): 657-660.
         <!-- @@todo read + check articles citing the article. -->
       </li>
+      <li>Kaiser, Jocelyn:
+        <a href="http://science.sciencemag.org/content/351/6273/548.full">Calling all failed replication experiments</a>,
+        <i class="journal">Science</i>, Vol. 351, Issue 6273 (5 <abbr>Feb.</abbr> 2016): 548.
+        This is an article about the new channel
+        <i>Preclinical Reproducibility and Robustness</i> where researchers can share their replications in biomedical research.
+        See <strong><a href="http://f1000research.com/channels/PRR"><i>Preclinical Reproducibility and Robustness</i></a></strong> on
+        F1000Research.
+      </li>
     </ul>
+
     <h3>Scientific Misconduct</h3>
     <ul>
       <li>Neuroskeptic:
@@ -452,6 +461,7 @@
         <!-- @@todo check/read -->
       </li>
     </ul>
+
     <h3>Peer Review</h3>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Frank_J._Tipler">Tipler, Frank J.</a>: 
