Hegel Stadtbib Stuttgart.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -124,6 +124,12 @@
       </li>
     </ul>
 
+    <h2>Links</h2>
+    <ul>
+      <li lang="de">Stadtbibliothek Stuttgart: 
+        <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
+      </li>
+    </ul>
   </main>
 
   <footer>
