Science Day topics: China.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -118,6 +118,41 @@
         <a href="http://ukcatalogue.oup.com/product/9780199574391.do"><abbr>ISBN</abbr> 978-0-19-957439-1</a>. 
       </li>
     </ul>
+    <h4>The Dunhuang Caves / Mogao</h4>
+    <ul>
+      <li>
+        The <a href="http://idp.bl.uk/">International Dunhuang Project</a>: The Silk Road Online.
+      </li>
+      <li>Whitfield, Roderick; Whitfield, Susan; Agnew, Neville: 
+        <i class="booktitle">Cave Temples of Mogao at Dunhuang: Art and History on the Silk Road</i>. 
+        2nd edition. Getty Conservation Institute, 2015.
+      </li>
+    </ul>
+    <h4>The Silk Road</h4>
+    <ul>
+      <li>Millward, James A.: 
+        <i class="booktitle">The Silk Road: A Very Short Introduction</i>. 
+        Oxford: Oxford University Press, 2013.
+        <!-- ISBN -->
+      </li>
+      <li>Hansen, Valerie: 
+        <i class="booktitle">The Silk Road: A New History</i>. 
+        Oxford University Press, 2015.
+        <!-- ISBN -->
+        <!-- http://www.amazon.com/The-Silk-Road-New-History/dp/0190218428/ --> 
+      </li>
+      <li>Whitfield, Susan: 
+        <i class="booktitle">Life along the Silk Road</i>. 2nd edition. 
+        University of California Press, 2015.
+        <!-- ISBN -->
+      </li>
+      <li>Liu, Xinru: 
+        <i class="booktitle">The Silk Road in World History</i>. Oxford University Press, 2010. 
+        <!-- ISBN -->
+      </li>
+      <li>See perhaps also Owen Lattimore (<abbr>e.g.</abbr> <i class="booktitle">Silks, Spices and Empire</i>). 
+      </li>
+    </ul>
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
