Science Day topics: Tibet; Chinese science.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -10,7 +10,7 @@
 </head>
 <body class="sciencepage">
   <header>
-    <h1><span class="h1txt">Science</span></h1>
+    <h1><span class="h1txt"><abbr>HdM</abbr> Science Day</span></h1>
   </header>
 
   <nav>
@@ -48,7 +48,6 @@
   </nav>
 
   <main>
-    <h1><abbr>HdM</abbr> Science Day</h1>
     <p>Each semester, Stuttgart Media University (<span lang="de">Hochschule der Medien</span>)
       organises a &ldquo;science day&rdquo;. This is an event where researches present
       topics that are not part of the regular curriculum at the university.
@@ -151,6 +150,44 @@
         <!-- ISBN -->
       </li>
       <li>See perhaps also Owen Lattimore (<abbr>e.g.</abbr> <i class="booktitle">Silks, Spices and Empire</i>). 
+      </li>
+    </ul>
+    <h4>The Tibetan Empire</h4>
+    <ul>
+      <li lang="fr">Deshayes, Laurent: 
+        <i class="booktitle">Histoire du Tibet</i>. Fayard, 1997.
+        <!-- ISBN -->
+      </li>
+      <li>Beckwith, Christopher:
+        <i class="booktitle">The Tibetan Empire in Central Asia</i>.
+        <!-- publisher, ISBN -->
+        (This book requires a solid background in the history of Asia.)
+      </li>
+      <li>Beckwith, Christopher I.: 
+        <i class="booktitle">Empires of the Silk Road: A History of Central Eurasia from the Bronze Age to the Present</i>. 
+        Princeton &amp; Oxford: Princeton University Press, 2009.
+        <!-- ISBN -->
+      </li>
+    </ul>
+    <h4>Science and Technology During the Song Dynasty</h4>
+    <ul>
+      <li>Needham, Joseph:
+        <i class="booktitle">Science and Civilisation in China</i>.
+        <!-- ISBN -->
+      </li>
+      <li>Habib, S. Irfan; Raina, Dhruv:
+        <i class="booktitle">Situating the History of Science: Dialogues with Joseph Needham</i>.
+        <!-- ISBN -->
+      </li>
+      <li lang="de"><span lang="en">Temple, Robert K. G.</span>:
+        <i class="booktitle">Das Land der fliegenden Drachen</i>.
+        Bergisch Gladbach, 1990.
+      </li>
+      <li>Temple, Robert; Needham, Joseph:
+        <i class="booktitle">The Genius of China: 3,000 Years of Science, Discovery, and Invention</i>.
+        <!-- ISBN -->
+      </li>
+      <li>Low, Morris: Osiris, Volume 13: Beyond Joseph Needham: Science, Technology, and Medicine in East and South East Asia.
       </li>
     </ul>
 
