--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -132,22 +132,23 @@
       <li>Millward, James A.: 
         <i class="booktitle">The Silk Road: A Very Short Introduction</i>. 
         Oxford: Oxford University Press, 2013.
-        <!-- ISBN -->
+        <a href="https://global.oup.com/academic/product/the-silk-road-a-very-short-introduction-9780199782864?cc=de&lang=en&"><abbr>ISBN</abbr> 9780199782864</a>.
       </li>
       <li>Hansen, Valerie: 
         <i class="booktitle">The Silk Road: A New History</i>. 
         Oxford University Press, 2015.
-        <!-- ISBN -->
+        <a href="https://global.oup.com/academic/product/the-silk-road-9780190218423?lang=en&cc=de"><abbr>ISBN</abbr> 9780190218423</a>.
         <!-- http://www.amazon.com/The-Silk-Road-New-History/dp/0190218428/ --> 
       </li>
       <li>Whitfield, Susan: 
         <i class="booktitle">Life along the Silk Road</i>. 2nd edition. 
         University of California Press, 2015.
-        <!-- ISBN -->
+        <a href="http://www.ucpress.edu/book.php?isbn=9780520280595"><abbr>ISBN</abbr> 9780520280595</a>.
+        <!-- @@Prologue: http://content.ucpress.edu/chapters/9076001.prologue.pdf -->
       </li>
       <li>Liu, Xinru: 
         <i class="booktitle">The Silk Road in World History</i>. Oxford University Press, 2010. 
-        <!-- ISBN -->
+        <a href="https://global.oup.com/academic/product/the-silk-road-in-world-history-9780195161748"><abbr>ISBN</abbr> 9780195161748</a>.
       </li>
       <li>See perhaps also Owen Lattimore (<abbr>e.g.</abbr> <i class="booktitle">Silks, Spices and Empire</i>). 
       </li>
@@ -195,7 +196,7 @@
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
     <p>The Crusades are one of many topics that Westerners only learn about from
       a Western point of view. Since the 1980s (and possibly even earlier),
-      there have been several publications that also present the islamic<!-- @@ --> point of view.
+      there have been several publications that also present the Islamic point of view.
     </p>
     <ul>
       <li>Maalouf, Amin: 
@@ -224,8 +225,9 @@
         (It is actually hard to find Medieval claims that the Earth was flat.)
       </li>
       <li>Witch burning was common in the Middle Ages 
-        (see <abbr>e.g.</abbr> the witch hunting scene in 
-        <i class="film">Monty Python and the Holy Grail</i><!-- @@link -->).
+        (see <abbr>e.g.</abbr> the 
+        <a href="https://www.youtube.com/watch?v=k3jt5ibfRzw">witch hunting scene</a> in 
+        <i class="film">Monty Python and the Holy Grail</i>).
         Witch hunting was more common in the late Middle Ages and the Renaissance.
         The infamous <a href="https://de.wikipedia.org/wiki/Hexenhammer" hreflang="de"><i class="booktitle"><span lang="la">Malleus Maleficarum</span> / <span lang="de">Hexenhammer</span></i></a>
         was probably first published in 1486, <abbr>i.e.</abbr> at the end of the Middle Ages.
