Tibetan empire: ISBN etc.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -157,17 +157,29 @@
     <ul>
       <li lang="fr">Deshayes, Laurent: 
         <i class="booktitle">Histoire du Tibet</i>. Fayard, 1997.
-        <!-- ISBN -->
+        <a href="http://www.fayard.fr/histoire-du-tibet-9782213595023"><abbr>ISBN</abbr> 9782213595023</a>.
       </li>
-      <li>Beckwith, Christopher:
-        <i class="booktitle">The Tibetan Empire in Central Asia</i>.
-        <!-- publisher, ISBN -->
-        (This book requires a solid background in the history of Asia.)
+      <li lang="fr">Deshayes, Laurent; Lenoir, Frédéric: 
+        <i class="booktitle">L'Épopée des Tibétains: entre mythe et réalité</i>.
+        Fayard, 2002.
+        <a href="http://www.fayard.fr/lepopee-des-tibetains-9782213610283"><abbr>ISBN</abbr> 9782213610283</a>.
+      </li>
+      <li><a href="http://earlytibet.com/author/">van Schaik, Sam</a>:
+        <i class="booktitle">Tibet: A History</i>.
+        Yale University Press, 2013.
+        <a href="http://yalebooks.com/book/9780300194104/tibet"><abbr>ISBN</abbr> 9780300194104</a>.
+      </li>
+      <li>Beckwith, Christopher I.:
+        <i class="booktitle">The Tibetan Empire in Central Asia: A History of the Struggle for Great Power among Tibetans, Turks, Arabs, and Chinese during the Early Middle Ages</i>.
+        Princeton University Press, 1993.
+        <a href="http://press.princeton.edu/titles/4185.html"><abbr>ISBN</abbr> 9780691024691</a>.
+        <br />(This book requires a solid background in the history of Asia.)
       </li>
       <li>Beckwith, Christopher I.: 
         <i class="booktitle">Empires of the Silk Road: A History of Central Eurasia from the Bronze Age to the Present</i>. 
         Princeton &amp; Oxford: Princeton University Press, 2009.
-        <!-- ISBN -->
+        <a href="http://press.princeton.edu/titles/8882.html"><abbr>ISBN</abbr> 9780691150345</a>.
+        <!-- Introduction: http://press.princeton.edu/chapters/i8882.pdf -->
       </li>
     </ul>
     <h4>Science and Technology During the Song Dynasty</h4>
