Loughlin: Why philosophy is not dead.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -582,6 +582,13 @@
         brain science, artificial intelligence research, and robotics.
         These five disciplines, taken together, are beginning to tell us what the meaning of humanity is.
       </li>
+      <li>Loughlin, V. K.:
+        <a href="http://whyphilosophyisnotdead.com/">Why philosophy is not dead</a>:
+        this is a blog by the Irish philosopher Victor Loughlin,
+        who currently works at the 
+        <a href="https://www.uantwerpen.be/en/rg/filop/">University of Antwerp's Centre for Philosophical Psychology</a>.
+        <!-- @@todo check Loughlin's PhD thesis at http://whyphilosophyisnotdead.com/phd/ -->
+      </li>
     </ul>
 
     <p>Claims that philosophy does not produce knowledge or makes no progress can
