Daniel Dennett at TED 2007.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -151,6 +151,10 @@
           </li>
         </ul>
       </li>
+      <li>Daniel Dennett:
+        <a href="https://www.youtube.com/watch?v=DTepA-WV_oE">Responding to Pastor Rick Warren</a> 
+        (YouTube, 25 minutes): presentation at <abbr>TED</abbr> 2007.
+      </li>
     </ul>
     <!-- 
       Jerry Coyne: "I got the book! You know, the one with the best arguments for God", 20.03.2015: https://whyevolutionistrue.wordpress.com/2014/03/20/i-got-the-book-you-know-the-one-with-the-best-arguments-for-god/
