Science Day: China; language; psychology.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -184,23 +184,80 @@
     </ul>
     <h4>Science and Technology During the Song Dynasty</h4>
     <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Science_and_technology_of_the_Song_dynasty">Science and technology of the Song dynasty</a>
+        on Wikipedia;
+      </li>
       <li>Needham, Joseph:
         <i class="booktitle">Science and Civilisation in China</i>.
-        <!-- ISBN -->
+        Book series started by
+        <a href="https://en.wikipedia.org/wiki/Joseph_Needham">Joseph Needham</a>.
+        See the list of volumes published so far in the
+        <a href="https://en.wikipedia.org/wiki/Science_and_Civilisation_in_China" title="'Science and Civilisation in China' on Wikipedia">Wikipedia article</a>.
       </li>
       <li>Habib, S. Irfan; Raina, Dhruv:
-        <i class="booktitle">Situating the History of Science: Dialogues with Joseph Needham</i>.
-        <!-- ISBN -->
+        <i class="booktitle">Situating the History of Science: Dialogues with Joseph Needham</i>. New Delhi: Oxford University Press, 1999; paperback reprint, 2001.
+        <!-- ISBN 0195646398; out of print -->
+        <!-- See http://muse.jhu.edu/journals/tech/summary/v045/45.1bray.html
+          review: https://www.researchgate.net/publication/240576075_Situating_the_History_of_Science_Dialogues_with_Joseph_Needham 
+        -->
       </li>
       <li lang="de"><span lang="en">Temple, Robert K. G.</span>:
         <i class="booktitle">Das Land der fliegenden Drachen</i>.
         Bergisch Gladbach, 1990.
       </li>
-      <li>Temple, Robert; Needham, Joseph:
+      <li>Temple, Robert K. G.; Needham, Joseph (introduction):
         <i class="booktitle">The Genius of China: 3,000 Years of Science, Discovery, and Invention</i>.
-        <!-- ISBN -->
+        Prion Books, 1991.
+        <a href="http://www.prionbooks.co.uk/books/products/the-genius-of-china"><abbr>ISBN</abbr> 9780233002026</a>.
       </li>
-      <li>Low, Morris: Osiris, Volume 13: Beyond Joseph Needham: Science, Technology, and Medicine in East and South East Asia.
+      <li>Low, Morris, <abbr>ed.</abbr>: <i class="journal">Osiris</i>, Volume 13 (1998): 
+        <i>Beyond Joseph Needham: Science, Technology, and Medicine in East and South East Asia</i>.
+        <a href="http://www.press.uchicago.edu/ucp/books/book/distributed/O/bo3621541.html"><abbr>ISBN</abbr> 9780226000916</a> (paperback, 1999).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=dpRdRFTQLTY">Simon Winchester on Joseph Needham and Bomb, Book and Compass</a>,
+        Sydney, September 2008.
+        <br /><a href="https://en.wikipedia.org/wiki/Simon_Winchester">Simon Winchester</a> wrote a biography of
+        Joseph Needham:
+        <i class="booktitle">Bomb, Book and Compass: Joseph Needham and the Great Secrets of China</i>. Viking, 2008.
+        <abbr>ISBN</abbr> 978 0 670 91379 4.
+        <!-- 
+          Review: Eric Hobsbawm: "Era of Wonders", London Review of Books, Vol. 31 No. 4 · 26 February 2009: http://www.lrb.co.uk/v31/n04/eric-hobsbawm/era-of-wonders 
+        -->
+      </li>
+    </ul>
+    <h4>4 May 1919 / May Fourth Movement</h4>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/May_Fourth_Movement">May Fourth Movement (Wikipedia)</a>
+      </li>
+      <li>Lu Xun: 
+        <a href="https://en.wikipedia.org/wiki/A_Madman%27s_Diary">A Madman's Diary (1918)</a>.
+      </li>
+      <li>Rana Mitter
+        <i class="booktitle">A Bitter Revolution. China's Struggle with the Modern World</i>. Oxford: Oxford University Press, 2004.
+        <a href="https://global.oup.com/academic/product/a-bitter-revolution-9780192806055"><abbr>ISBN</abbr> 9780192806055</a>.
+      </li>
+      <li>Jonathan D. Spence:
+        <i class="booktitle">The Search for Modern China</i>. New York: Norton, 1999; third edition, 2012. (976 p.)
+        <a href="http://books.wwnorton.com/books/webad.aspx?id=4294970239"><abbr>ISBN</abbr> 978-0-393-93451-9</a>.
+      </li>
+      <li>Jonathan D. Spence:
+        <i class="booktitle">The Search for Modern China: A Documentary Collection</i>. New York: Norton, 2013. (656 pages)
+        <a href="http://books.wwnorton.com/books/webad.aspx?id=4294974470"><abbr>ISBN</abbr> 978-0-393-92085-7</a>.
+      </li>
+      <li>Some YouTube videos:
+        <ul>
+          <li><abbr>CCTV</abbr>: 
+            <a href="https://www.youtube.com/watch?v=MZNtb94z5QA">Legacy of May 4th lives on in China</a> 
+            (2 minutes, 2014; contains fragments of an interview with Luo Pinghai, the son of <a href="https://en.wikipedia.org/wiki/Luo_Zhanglong">Luo Zhanglong</a>).
+          </li>
+          <li>ChinaForbiddenNews / NTDTV.com: 
+            <a href="https://www.youtube.com/watch?v=wljy9QmVTF4">May Fourth Movement: A Century-Long Impact</a> 
+            (4 minutes, 2013).
+          </li>
+        </ul>
       </li>
     </ul>
 
@@ -329,6 +386,46 @@
       </li>
     </ul>
 
+    <h2 id="language">Language</h2>
+    <ul>
+      <li>Noam Chomsky's theory of
+        <a href="https://en.wikipedia.org/wiki/Universal_Grammar">Universal Grammar</a>.
+      </li>
+      <li>Language learning techniques, especially techniques supported by scientific evidence.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Linguistic_relativity">Linguistic relativity</a>,
+        also known as the Sapir–Whorf hypothesis.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Conceptual_metaphor">Conceptual metaphor</a>;
+        see also the book
+        <i class="booktitle">Metaphors We Live by</i>
+        by George Lakoff and Mark Johnson
+        (University of Chicago Press, 1980, 2003; <a href="http://press.uchicago.edu/ucp/books/book/chicago/M/bo3637992.html"><abbr>ISBN</abbr> 9780226468013</a>).
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>.
+      </li>
+    </ul>
+
+    <h2>Psychology</h2>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Milgram_experiment">Milgram experiment</a>
+        on obedience to authority.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Stanford_prison_experiment">Stanford prison experiment</a>.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess sychology</a>,
+        for example the research by the Dutch psychologist
+        <a href="https://en.wikipedia.org/wiki/Adriaan_de_Groot" lang="de" hreflang="en">Adriaan de Groot</a>
+        or by the Swiss psychologist
+        <a href="https://en.wikipedia.org/wiki/Fernand_Gobet">Fernand Gobet</a>.
+        (So not necessarily in the sense of the following video: <a href="https://www.youtube.com/watch?v=Rvzw21_3Hs4">Chess Psychology PHENOMENAL Way to Turn Your Thinking Around &amp; WIN</a> (YouTube, 34 minutes).
+      </li>
+    </ul>
   </main>
 
   <footer>
