--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -45,15 +45,14 @@
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
-      <p lang="fr">
-        <q cite="https://archive.org/details/QuePhilosopherCEstApprendreAMourir">Philosopher, c'est apprendre à mourir </q>
-        (<span lang="en">To philosophise is to learn to die.</span>)
-        <cite><a href="https://fr.wikipedia.org/wiki/Michel_de_Montaigne">Michel de Montaigne</a>, 
-        <a href="https://fr.wikipedia.org/wiki/Essais" class="booktitle">Essais</a>, Livre 1 (1580).
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://en.wikiquote.org/wiki/Walter_Lippmann">Where all think alike, no one thinks very much.</q>
+        <cite><a href="https://en.wikipedia.org/wiki/Walter_Lippmann">Walter Lippmann</a>, 
+        <i class="booktitle">The Stakes of Diplomacy</i> (1915).
         </cite>
       </p>
-    </blockquote-->
+    </blockquote>
 
 
     <h2>Three Complementary Paths</h2>
@@ -368,10 +367,18 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="https://aeon.co/conversations/how-should-philosophy-be-taught">How should philosophy be taught?</a>,
+        a discussion on Aeon started by Nigel Warburton on 3 March 2016.
+        The discussion is connected to the opinion piece
+        <a href="https://aeon.co/opinions/to-see-philosophy-in-action-visit-a-primary-school-class">What primary school children can teach academic philosophers</a>
+        by Peter Worley, <abbr>CEO</abbr> of the
+        <a href="http://www.philosophy-foundation.org/">Philosophy Foundation</a>.
+      </li>
       <li>Appiah, Kwame Anthony:
         <a href="https://www.youtube.com/watch?v=44FQpKTEJ3M">What does a philosopher do?</a>
         (10-minute video on the Big Think channel).
-      </li> 
+      </li>
     </ul>
 
   </main>
